k8s/src/resources/localproxy/service-cr10.yml
kind: Service
apiVersion: v1
metadata:
  name: localproxy-cr10-svc
spec:
  ipFamilies:
  - IPv4
  ports:
    - name: 80-tcp
      protocol: TCP
      port: 80
spec:
  type: ExternalName
  externalName: 192.168.18.101
