k8s/src/resources/localproxy/ingress-cr10.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: localproxy-cr10-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: cr10.${NETWORK_HOSTNAME_SUFFIX}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: localproxy-cr10-svc
                port:
                  name: 80-tcp
