k8s/src/resources/localproxy/ingress-ender3.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: localproxy-ender3-ingress
  annotations:
    traefik.ingress.kubernetes.io/websocket-timeout: "600s"
spec:
  ingressClassName: traefik
  rules:
    - host: ender3.${NETWORK_HOSTNAME_SUFFIX}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: localproxy-svc
                port:
                  number: 80
