k8s/src/resources/localproxy/ingress-homebridge.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: localproxy-homebridge-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: security-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: homebridge.${NETWORK_HOSTNAME_SUFFIX}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: localproxy-svc
                port:
                  number: 80
  tls:
    - secretName: homebridge-tls
      hosts:
        - homebridge.${NETWORK_HOSTNAME_SUFFIX}
