k8s/src/resources/localproxy/ingress-nas.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: localproxy-nas-ingress
  annotations:
      traefik.ingress.kubernetes.io/websocket: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: nas.${NETWORK_HOSTNAME_SUFFIX}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: localproxy-svc
                port:
                  number: 80
